--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set (CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fno-omit-frame-pointer -fsanitiz
 # include(CTest)
 # enable_testing()
 
-add_executable(graph-traversal src/main.c src/node.c src/graph.c src/file_management.c src/neighbour.c src/coordinates.c)
+add_executable(graph-traversal src/main.c src/node.c src/graph.c src/file_management.c src/list_node.c src/coordinates.c)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
